<resources>
    <string name="app_name">Mundraub Navigator</string>
    <string name="title_activity_maps">Mundraub Navigator</string>
    <string name="title_activity_location_picker">Pick location then press OK</string>
    <string name="title_activity_login">Log in to Mundraub</string>
    <string name="title_activity_register">Create your account</string>
    <string name="title_activity_plant_list">My discoveries</string>
    <string name="title_activity_report_plant">Report location</string>
    <string name="title_activity_app_settings">App settings</string>

    <string name="imprint">Imprint</string>
    <string name="imprint_url" translatable="false">https://mundraub.org/impressum</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_url" translatable="false">https://mundraub.org/agb_datenschutz</string>
    <string name="mundraub_rules">mundraub rules</string>
    <string name="mundraub_rules_url" translatable="false">https://mundraub.org/mundraeuber-regeln</string>
    <string name="flora_incognita" translatable="false">Flora Incognita</string>
    <string name="flora_incognita_url" translatable="false">market://details?id=com.floraincognita.app.floraincognita</string>

    <string name="tid4">Apple</string>
    <string name="tid5">Pear</string>
    <string name="tid6">Cherry</string>
    <string name="tid7">Mirabelle</string>
    <string name="tid8">Plum</string>
    <string name="tid9">Quince</string>
    <string name="tid10">Apricot</string>
    <string name="tid11">Mulberry</string>
    <string name="tid12">Other fruit</string>

    <string name="tid14">Hazelnut</string>
    <string name="tid15">Walnut</string>
    <string name="tid16">Chestnut</string>
    <string name="tid17">Other nut</string>

    <string name="tid18">Blackberry</string>
    <string name="tid19">Wild Strawberry</string>
    <string name="tid20">Blueberry</string>
    <string name="tid21">Elderberry</string>
    <string name="tid22">Raspberry</string>
    <string name="tid23">Currant</string>
    <string name="tid24">Cornel Cherry</string>
    <string name="tid25">Shadbush</string>
    <string name="tid26">Sea Buckthorn</string>
    <string name="tid27">Rose Hip</string>
    <string name="tid28">Blackthorn</string>
    <string name="tid29">Hawthorn</string>
    <string name="tid30">Other fruit shrub</string>

    <string name="tid31">Ramson</string>
    <string name="tid32">Juniper</string>
    <string name="tid33">Mint</string>
    <string name="tid34">Rosemary</string>
    <string name="tid35">Woodruff</string>
    <string name="tid36">Thyme</string>
    <string name="tid37">Other herb</string>

    <string name="tid80">Fruit trees</string>
    <string name="tid81">Nuts</string>  <!--    Nut trees-->
    <string name="tid82">Fruit shrubs</string>
    <string name="tid83">Herbs</string>

    <string name="tid98">Seasonals</string>
    <string name="tid99">Everything</string>
    <string name="tidnull">Cluster (Zoom To Expand)</string>

    <string name="inSeason">In season!! :D</string>
    <string name="notInSeason">Not in season :(</string>
    <string name="onlyShowing">Showing:\u0020</string>

    <string name="addNode">Create new marker</string>
    <string name="editNode">Edit existing marker</string>
    <string name="email">Email</string>
    <string name="user">Username</string>
    <string name="pass">Password</string>
    <string name="type">Type of find</string>
    <string name="amnt">Amount</string>
    <string name="img_optional">Image (optional)</string>
    <string name="img_pick">Pick image</string>
    <string name="img_capture">Take photo</string>
    <string name="desc">Description (preferably in German)</string>
    <string name="upld">Upload!</string>
    <string name="uplding">Uploading…</string>
    <string name="lgin">Log in!</string>
    <string name="save">Save</string>
    <string name="reg">Register</string>

    <string name="errMsgNoInternet">Couldn\'t connect</string>
    <string name="errMsgLoginInfo">Please fill in login info</string>
    <string name="errMsgRegisterInfo">Please fill in registration info</string>
    <string name="errMsgAccess">No access to this resource</string>
    <string name="errMsgLogin">Login failed. Make sure you entered the correct details and that your email is verified.</string>
    <string name="errMsgLoginSuccess">Login successful!</string>
    <string name="errMsgLogoutSuccess">Logout successful.</string>
    <string name="errMsgRegisterSuccess">Registration successful! You can use your account if you respond to our confirmation email.</string>
    <string name="errMsgDesc">Please add a description</string>
    <string name="errMsgType">Please specify a valid fruit type</string>
    <string name="errMsgLoc">Please specify a valid location</string>
    <string name="errMsgOpFail">Operation failed</string>
    <string name="errMsgSuccess">Upload successful!</string>
    <string name="errMsgDeleteSuccess">Successfully deleted!</string>
    <string name="errMsgReportSuccess">Successfully reported!</string>
    <string name="errMsgOpenIntent">No app to open this!</string>

    <string name="report0">Location is private property</string>
    <string name="report1">Location is nature reserve</string>
    <string name="report2">Location is incorrectly placed</string>
    <string name="report3">Location does not exist (anymore)</string>
    <string name="report4">Other reason</string>

    <string name="mapType">Map</string>
    <string name="mapType1">Roadmap</string>
    <string name="mapType2">Satellite</string>
    <string name="mapType3">Terrain</string>
    <string name="mapType4">Hybrid (Roadmap/Satellite)</string>

    <string name="dirType">Directions</string>
    <string name="dirType1">Biking</string>
    <string name="dirType2">Walking</string>
    <string name="dirType3">Driving</string>

    <string name="markers">markers</string>
    <string name="plant_atlas">Plant atlas</string>
    <string name="plant_atlas_about">Here you can see statistics and profiles for our plant types.\n\nYou can also see which types you\'ve contributed to mundraub.org (in green).</string>
    <string name="plant_calendar">Plant calendar</string>
    <string name="submitted">Thank you!</string>
    <string name="not_submitted">none are from you</string>

    <string name="loggedInAs">Logged in as: %1$s</string>
    <string name="tapForInfo">--- Tap to download info ---</string>
    <string name="loading">(loading…)</string>
    <string name="geocoding">Geocoding…\n(requires internet)</string>
    <string name="geocoding_failed">Geocoding failed!\nPick location again later</string>
    <string name="login_info">Adding, editing and reporting markers requires a Mundraub account.</string>
    <string name="empty_info">You haven\'t submitted any places yet.</string>
    <string name="register_info">Your username can contain the following special characters: _.-\'@\n\nAfter registration, please confirm your email address by clicking on our email.</string>
    <string name="report_info">Reporting markers is currently disabled to prevent spam. Using below form will prepare an email to info@mundraub.org instead.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="reallyDelete">Really delete?</string>
    <string name="reallyLogout">Really logout?</string>
    <string name="logout">Logout</string>
</resources>
