<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".activities.PlantForm">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeTIL"
            android:hint="@string/type"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu" >

            <AutoCompleteTextView
                android:id="@+id/typeTIED"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <include layout="@layout/chip_group_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:text="Image (optional)"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <Button
                android:id="@+id/btn_upload"
                android:text="Pick stored image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Button>

            <Button
                android:text="Take an image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_upload">
            </Button>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/btn_upload"
                android:adjustViewBounds="true"
                android:src="@drawable/frame_apple">
            </ImageView>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/descriptionTIL"
            android:hint="@string/desc"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTIED"
                android:minLines="3"
                android:maxLines="3"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/button_loc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_marginBottom="12dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upld_button"
            android:text="@string/upld" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
